# commenter

./: LICENSE  README.md  commenter.py  format.txt  pyproject.toml
src/commenter_tool/: commenter.py  main.py
src/commenter_tool/data/: syntax.txt
