[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-commenter-vraj0703"  # IMPORTANT: This name must be unique on PyPI!
version = "0.0.2"
authors = [
    { name="vraj0703", email="vraj0703@gmail.com" },
]
description = "An AI-powered tool to automatically comment code using local Ollama models."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]

# This section creates the 'commenter' command in the user's terminal
[project.scripts]
commenter = "commenter_tool.main:main"

# This section tells setuptools to include your data files
[tool.setuptools.package-data]
commenter_tool = ["data/*.txt"]